# RomanNumeralAnalysis-Tool

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md  build.sh  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: chord.cpp  chord.hpp  chordProgression.cpp  chordProgression.hpp  lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: RNA-tool_test.cpp
